# VideoLake

./: .env.example  .env.template  .gitignore  BENCHMARK_EXECUTION_GUIDE.md  BENCHMARK_EXECUTIVE_SUMMARY.md  BENCHMARK_SETUP_GUIDE.md  BENCHMARK_SSM_GUIDE.md  CHANGELOG.md  CONFIGURATION_SYSTEM_SUMMARY.md  CONTRIBUTING.md  CRUSH.md  DEMO_AND_BENCHMARK_GUIDE.md  DEMO_FUNCTIONALITY_REMOVAL_ANALYSIS.md  DEV_SETUP.md  FINAL_PROJECT_STATUS.md  FRONTEND_BACKEND_SEPARATION_SUMMARY.md  FRONTEND_CLEANUP_SUMMARY.md  NEXT_STEPS_REINDEXING_AND_BENCHMARKING.md  QUICKSTART.md  QUICKSTART_DEPLOY.md  QUICKSTART_REACT.md  README.md  TASK_COMPLETION_STATUS.md  TWELVELABS_API_INTEGRATION_SUMMARY.md  VIDEOLAKE_ARCHITECTURE.md  VIDEOLAKE_IMPLEMENTATION_PLAN.md  VIDEOLAKE_README.md  check_os_settings.py  comparison_results.json  core_validation_results.json  deploy_videolake.sh  example_usage.py  opensearch_serverless_results.json  progressive_validation_results.json  pyproject.toml  pytest.ini  real_opensearch_test.json  real_validation_results.json  requirements-benchmark.txt  requirements.txt  (+9 more)
.checkpoints/: MSR-VTT (100 videos)_progress.json
.claude/: CLAUDE.md
.mulch/: mulch.config.yaml
.overstory/: config.yaml  groups.json
.seeds/: config.yaml  issues.jsonl
archive/: README.md  docker-compose.yaml
benchmark-results/: 2025-11-18-end-to-end-benchmark-summary.md  FINAL_COMPARISON_REPORT.md  ccopen_benchmark_summary.md  ccopen_lancedb_ebs_audio_search.json  ccopen_lancedb_ebs_image_search.json  ccopen_lancedb_s3_audio_search.json  ccopen_lancedb_s3_image_search.json  ccopen_lancedb_s3_image_search_v2.json  ccopen_lancedb_s3_text_search.json  ccopen_lancedb_s3_text_search_v2.json  ccopen_opensearch_audio_search_v2.json  ccopen_opensearch_image_search.json  ccopen_opensearch_image_search_v2.json  ccopen_opensearch_text_search_v2.json  ccopen_qdrant_ebs_text_search.json  ccopen_s3vector_audio_search.json  ccopen_s3vector_audio_search_v2.json  ccopen_s3vector_image_search_v2.json  ccopen_s3vector_text_search_v2.json  comprehensive-comparison-report.md  qdrant-fixed-test.json  report_20251113_225203.md  s3vector-search-50q.json
coordination/: resource_registry.json
deprecated/: README.md  cleanup_resource_registry_duplicates.py  qdrant_deployment_manager.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BACKEND_CONNECTIVITY_VALIDATION.md  BACKEND_DEEP_ANALYSIS.md  BACKEND_VALIDATION_AND_IMPROVEMENTS.md  BEDROCK_S3_PERMISSIONS_FIX.md  BENCHMARK_RESULTS_REPORT.md  CLEANUP_ENHANCEMENTS.md  CLEANUP_FIX.md  COMPREHENSIVE_DATASET_RESEARCH.md  CORS_TROUBLESHOOTING.md  CRITIQUE_EXECUTIVE_SUMMARY.md  DATASET_RESEARCH_SUMMARY.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ENHANCEMENT_SUMMARY.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_ORGANIZATION.md  EMBEDDING_PROVIDERS.md  ENHANCED_SERVICES_SUMMARY.md  FAQ.md  FINAL_QUALITY_REPORT.md  IMPLEMENTATION_COMPLETE.md  INDEX_DATASET_RESEARCH.md  MEDIA_PROCESSING_ENHANCEMENTS.md  OPENSEARCH_REFACTORING_PLAN.md  PERFORMANCE_BENCHMARKING.md  PRODUCTION_DEPLOYMENT_RECOMMENDATIONS.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_CRITIQUE_AND_IMPROVEMENT_PLAN.md  PROJECT_STRUCTURE.md  REACT_FRONTEND_MIGRATION.md  REFACTORING_PLAN.md  RESEARCH_DATASETS.md  RESOURCE_LIFECYCLE_IMPLEMENTATION.md  S3VECTOR_PROJECT_COMPREHENSIVE_STATUS.md  SESSION_COMPLETE.md  STREAMLIT_TO_REACT_REFACTOR_SUMMARY.md  (+49 more)
embeddings/: test-embeddings-audio.json  test-embeddings-image.json
examples/: README.md  batch_processing_demo.py  bedrock_embedding_demo.py  bucket_management_demo.py  comprehensive_real_demo.py  core_vector_validation.py  cross_modal_search_demo.py  end_to_end_workflow_demo.py  index_management_demo.py  opensearch_integration_demo.py  progressive_opensearch_test.py  real_aws_vector_validation.py  real_s3vector_validation.py  real_video_processing_demo.py  step_by_step_opensearch_test.py  three_way_vector_comparison_demo.py  validate_vector_approaches.py  vector_operations_demo.py  vector_validation.py
frontend/: ENHANCED_README.md  README.md  S3Vector_App.py  (+15 more)
(+933 files in other folders)
