[project]
name = "videolake"
version = "0.1.0"
description = "AWS Vector Store Comparison Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "S3Vector Team"}
]

dependencies = [
    # AWS SDK and core dependencies
    "boto3>=1.35.0",
    "botocore>=1.35.0",

    # Environment configuration
    "python-dotenv>=1.0.0",

    # Data processing and validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "dataclasses-json>=0.6.0",

    # Async processing
    "asyncio-throttle>=1.0.0",

    # HTTP client for file downloads
    "requests>=2.32.0",
    "requests-aws4auth>=1.3.1",

    # Vector operations and numerical computing
    "numpy>=1.26.0,<3.0",
    "scikit-learn>=1.6.0",
    "umap-learn>=0.5.0",
    "pandas>=2.2.0",

    # Vector database providers
    "lancedb>=0.18.0",
    "pyarrow>=18.0.0",
    "qdrant-client>=1.12.0",
    "opensearch-py>=2.8.0",

    # Media processing
    "pillow>=11.0.0",
    "opencv-python>=4.12.0",
    "ffmpeg-python>=0.2.0",

    # Data visualization
    "plotly>=5.24.0",

    # FastAPI REST API for React frontend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    # Code formatting and linting
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",

    # Type checking
    "mypy>=1.13.0",
    "types-requests>=2.32.0",

    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "moto[all]>=5.0.0",
]

benchmark = [
    # Additional benchmark-specific dependencies
    "memory-profiler>=0.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use mocks for external services)",
    "e2e: End-to-end tests (full system test)",
    "requires_aws: Tests requiring AWS credentials (no cost)",
    "real_aws: Tests using real AWS resources (will incur costs)",
    "expensive: Expensive tests (e.g., OpenSearch domain)",
    "slow: Slow tests (takes >1 minute)",
    "api: FastAPI endpoint tests",
    "terraform: Terraform infrastructure tests",
    "provider: Provider interface tests",
    "frontend: Frontend component tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "qdrant_client.*",
    "opensearch.*",
    "cv2.*",
    "ffmpeg.*",
    "plotly.*",
    "moto.*",
]
ignore_missing_imports = true
